--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Smashing Magazine - For Web Designers and Developers</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
+    <header>
+      <div class="header-head">
+        <div class="logo">
 
+        </div>
+        <div class="header-element">
+
+        </div>
+        <div class="header-element">
+
+        </div>
+        <div class="header-element">
+
+        </div>
+        <div class="header-element">
+
+        </div>
+        <div class="header-element">
+
+        </div>
+        <div class="header-element">
+
+        </div>
+      </div>
+      
+    </header>
+    <main>
+
+    </main>
   </body>
 </html>
