working on the red part

--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
 
         </div>
       </div>
-      
+
     </header>
     <main>
-
+      <div class="box back1">
+        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+      </div>
+      <div class="box back2">
+        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+      </div>
+      <div class="box back3">
+        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+      </div>
+      <div class="box back4">
+        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+      </div>
     </main>
   </body>
 </html>
