--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Smashing Magazine - For Web Designers and Developers</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Martel&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -13,10 +15,20 @@
 
         </div>
         <div class="header-element">
-
+          <div class="font-menu-title">
+            Articles
+          </div>
+          <div class="font-menu-sub-title">
+            Design & development
+          </div>
         </div>
         <div class="header-element">
-
+          <div class="font-menu-title">
+            Books
+          </div>
+          <div class="font-menu-sub-title">
+            Physical & digital books
+          </div>
         </div>
         <div class="header-element">
 
@@ -31,7 +43,7 @@
 
         </div>
       </div>
-      
+
     </header>
     <main>
 
