Continued working on the menu.

--- a/index.html
+++ b/index.html
@@ -14,31 +14,33 @@
         <div class="logo">
 
         </div>
-        <div class="header-element">
-          <div class="font-menu-title">
-            Articles
+        <nav>
+          <div class="header-element">
+            <div class="font-menu-title">
+              Articles
+            </div>
+            <div class="font-menu-sub-title">
+              Design & development
+            </div>
           </div>
-          <div class="font-menu-sub-title">
-            Design & development
+          <div class="header-element">
+            <div class="font-menu-title">
+              Books
+            </div>
+            <div class="font-menu-sub-title">
+              Physical & digital books
+            </div>
           </div>
-        </div>
-        <div class="header-element">
-          <div class="font-menu-title">
-            Books
-          </div>
-          <div class="font-menu-sub-title">
-            Physical & digital books
-          </div>
-        </div>
-        <div class="header-element">
+          <div class="header-element">
 
-        </div>
-        <div class="header-element">
+          </div>
+          <div class="header-element">
 
-        </div>
-        <div class="header-element">
+          </div>
+          <div class="header-element">
 
-        </div>
+          </div>
+        </nav>
         <div class="header-element">
 
         </div>
