working with the red squares

--- a/index.html
+++ b/index.html
@@ -49,16 +49,44 @@
     </header>
     <main>
       <div class="box back1">
-        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+        <div class="sub-box">
+            <a class="my-a box-a-top" >Created </a>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <div class="my-a box-a-bottom">
+              <a >Apps </a>
+              <a >Mobile </a>
+            </div>
+        </div>
       </div>
       <div class="box back2">
-        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+        <div class="sub-box">
+            <a class="my-a box-a-top" >Created </a>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <div class="my-a box-a-bottom">
+              <a >Apps </a>
+              <a >Mobile </a>
+            </div>
+        </div>
       </div>
       <div class="box back3">
-        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+        <div class="sub-box">
+            <a class="my-a box-a-top" >Created </a>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <div class="my-a box-a-bottom">
+              <a >Apps </a>
+              <a >Mobile </a>
+            </div>
+        </div>
       </div>
       <div class="box back4">
-        <div class="sub-box"><a>Created To Make You Think: Meet Our New Printed Magazine</a></div>
+        <div class="sub-box">
+            <a class="my-a box-a-top" >Created </a>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <div class="my-a box-a-bottom">
+              <a >Apps </a>
+              <a >Mobile </a>
+            </div>
+        </div>
       </div>
     </main>
   </body>
