working on the responsiveness of red squares

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <main>
       <div class="box back1">
         <div class="sub-box">
-            <a class="my-a box-a-top" >Created </a>
-            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <a class="my-a box-a-top" >Created </a><br>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a><br>
             <div class="my-a box-a-bottom">
               <a >Apps </a>
               <a >Mobile </a>
@@ -60,8 +60,8 @@
       </div>
       <div class="box back2">
         <div class="sub-box">
-            <a class="my-a box-a-top" >Created </a>
-            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <a class="my-a box-a-top" >Created </a><br>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a><br>
             <div class="my-a box-a-bottom">
               <a >Apps </a>
               <a >Mobile </a>
@@ -70,8 +70,8 @@
       </div>
       <div class="box back3">
         <div class="sub-box">
-            <a class="my-a box-a-top" >Created </a>
-            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <a class="my-a box-a-top" >Created </a><br>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a><br>
             <div class="my-a box-a-bottom">
               <a >Apps </a>
               <a >Mobile </a>
@@ -80,8 +80,8 @@
       </div>
       <div class="box back4">
         <div class="sub-box">
-            <a class="my-a box-a-top" >Created </a>
-            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a>
+            <a class="my-a box-a-top" >Created </a><br>
+            <a class="my-a box-a-middle">Created To Make You Think: Meet Our New Printed Magazine</a><br>
             <div class="my-a box-a-bottom">
               <a >Apps </a>
               <a >Mobile </a>
