Worked on the menu

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Smashing Magazine - For Web Designers and Developers</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -12,9 +13,9 @@
     <header>
       <div class="header-head">
         <div class="logo">
-
+          dasdadadsada
         </div>
-        <nav>
+        <nav class="nav-menu">
           <div class="header-element">
             <div class="font-menu-title">
               Articles
@@ -32,17 +33,32 @@
             </div>
           </div>
           <div class="header-element">
-
+            <div class="font-menu-title">
+              Events
+            </div>
+            <div class="font-menu-sub-title">
+              Conferences & workshops
+            </div>
           </div>
           <div class="header-element">
-
+            <div class="font-menu-title">
+              Jobs
+            </div>
+            <div class="font-menu-sub-title">
+              Find work & employees
+            </div>
           </div>
           <div class="header-element">
-
+            <div class="font-menu-title">
+              Membership
+            </div>
+            <div class="font-menu-sub-title">
+              Webinars & early-birds
+            </div>
           </div>
         </nav>
-        <div class="header-element">
-
+        <div class="header-element div-nav-btn">
+          <button class="nav-button" type="button" name="button"><i class="glyphicon glyphicon-search"></i> Topics</button>
         </div>
       </div>
 
