Added the links to the menu. Improved styles for menu

--- a/index.html
+++ b/index.html
@@ -17,44 +17,54 @@
         </div>
         <nav class="nav-menu">
           <div class="header-element">
-            <div class="font-menu-title">
-              Articles
-            </div>
-            <div class="font-menu-sub-title">
-              Design & development
-            </div>
+            <a class="a-menu" href="https://www.smashingmagazine.com/articles/">
+              <div class="font-menu-title">
+                Articles
+              </div>
+              <div class="font-menu-sub-title">
+                Design & development
+              </div>
+            </a>
           </div>
           <div class="header-element">
-            <div class="font-menu-title">
-              Books
-            </div>
-            <div class="font-menu-sub-title">
-              Physical & digital books
-            </div>
+            <a class="a-menu" href="https://www.smashingmagazine.com/printed-books/">
+              <div class="font-menu-title">
+                Books
+              </div>
+              <div class="font-menu-sub-title">
+                Physical & digital books
+              </div>
+            </a>
           </div>
           <div class="header-element">
-            <div class="font-menu-title">
-              Events
-            </div>
-            <div class="font-menu-sub-title">
-              Conferences & workshops
-            </div>
+            <a class="a-menu" href="https://www.smashingmagazine.com/events/">
+              <div class="font-menu-title">
+                Events
+              </div>
+              <div class="font-menu-sub-title">
+                Conferences & workshops
+              </div>
+            </a>
           </div>
           <div class="header-element">
-            <div class="font-menu-title">
-              Jobs
-            </div>
-            <div class="font-menu-sub-title">
-              Find work & employees
-            </div>
+            <a class="a-menu" href="https://www.smashingmagazine.com/jobs">
+              <div class="font-menu-title">
+                Jobs
+              </div>
+              <div class="font-menu-sub-title">
+                Find work & employees
+              </div>
+            </a>
           </div>
           <div class="header-element">
-            <div class="font-menu-title">
-              Membership
-            </div>
-            <div class="font-menu-sub-title">
-              Webinars & early-birds
-            </div>
+            <a class="a-menu" href="https://www.smashingmagazine.com/membership">
+              <div class="font-menu-title">
+                Membership
+              </div>
+              <div class="font-menu-sub-title">
+                Webinars & early-birds
+              </div>
+            </a>
           </div>
         </nav>
         <div class="header-element div-nav-btn">
