Added the icons to the menu and the transition effects. Improvements on styling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <nav class="nav-menu">
           <div class="header-element">
             <a class="a-menu" href="https://www.smashingmagazine.com/articles/">
+              <figure>
+                <img class="nav-img" src="https://d33wubrfki0l68.cloudfront.net/2bc30327ebf529a249e825447d86f18546a1d6db/36b19/images/nav-icons/articles.svg" alt="Articles">
+              </figure>
               <div class="font-menu-title">
                 Articles
               </div>
@@ -28,6 +31,9 @@
           </div>
           <div class="header-element">
             <a class="a-menu" href="https://www.smashingmagazine.com/printed-books/">
+              <figure>
+                <img class="nav-img" src="https://d33wubrfki0l68.cloudfront.net/9b4ab044835dfde9adcfb5433a36be21a66cee4c/5b489/images/nav-icons/books.svg" alt="Books">
+              </figure>
               <div class="font-menu-title">
                 Books
               </div>
@@ -38,6 +44,9 @@
           </div>
           <div class="header-element">
             <a class="a-menu" href="https://www.smashingmagazine.com/events/">
+              <figure>
+                <img class="nav-img" src="https://d33wubrfki0l68.cloudfront.net/5831a43ae2230e30a035539e7c2b831561d2d2fd/86bab/images/nav-icons/events.svg" alt="Events">
+              </figure>
               <div class="font-menu-title">
                 Events
               </div>
@@ -48,6 +57,9 @@
           </div>
           <div class="header-element">
             <a class="a-menu" href="https://www.smashingmagazine.com/jobs">
+              <figure>
+                <img class="nav-img" src="https://d33wubrfki0l68.cloudfront.net/0b5647613c9ac6cfb7358e2c12d2912daa78af4f/15c46/images/nav-icons/jobs.svg" alt="Jobs">
+              </figure>
               <div class="font-menu-title">
                 Jobs
               </div>
@@ -58,6 +70,9 @@
           </div>
           <div class="header-element">
             <a class="a-menu" href="https://www.smashingmagazine.com/membership">
+              <figure>
+                <img class="nav-img" src="https://d33wubrfki0l68.cloudfront.net/75778fbc97d23f2fca1610f78b2d7226b137fbfc/acdc3/images/nav-icons/membership.svg" alt="Membership">
+              </figure>
               <div class="font-menu-title">
                 Membership
               </div>
