Added the logo Added the border to active a's Fixed the issue with the active border taking up extra space

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <header>
       <div class="header-head">
         <div class="logo">
-          dasdadadsada
+          <a class="a-menu" href="https://www.smashingmagazine.com/">
+            <picture>
+              <source srcset="https://d33wubrfki0l68.cloudfront.net/3fbf6ef77e5e00aea7a22423087373169b52ae7e/413ff/images/logo/logo.svg" media="(max-width: 1000px)">
+              <img src="https://d33wubrfki0l68.cloudfront.net/81fa290218cedc39d32be7b1f1aba58a25829ebe/0a05f/images/logo--full.svg" alt="Logo">
+            </picture>
+          </a>
         </div>
         <nav class="nav-menu">
           <div class="header-element">
