Added the logos and started working on responsiveness for the menu

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       <div class="header-head">
         <div class="logo">
           <a class="a-menu" href="https://www.smashingmagazine.com/">
-            <picture>
-              <source srcset="https://d33wubrfki0l68.cloudfront.net/3fbf6ef77e5e00aea7a22423087373169b52ae7e/413ff/images/logo/logo.svg" media="(max-width: 1000px)">
-              <img src="https://d33wubrfki0l68.cloudfront.net/81fa290218cedc39d32be7b1f1aba58a25829ebe/0a05f/images/logo--full.svg" alt="Logo">
-            </picture>
+            <figure>
+              <img class="logo-full" srcset="https://d33wubrfki0l68.cloudfront.net/81fa290218cedc39d32be7b1f1aba58a25829ebe/0a05f/images/logo--full.svg" alt="Logo">
+            </figure>
+            <figure>
+              <img class="logo-small" src="https://d33wubrfki0l68.cloudfront.net/3fbf6ef77e5e00aea7a22423087373169b52ae7e/413ff/images/logo/logo.svg" alt="Logo">
+            </figure>
           </a>
         </div>
         <nav class="nav-menu">
@@ -88,7 +90,7 @@
           </div>
         </nav>
         <div class="header-element div-nav-btn">
-          <button class="nav-button" type="button" name="button"><i class="glyphicon glyphicon-search"></i> Topics</button>
+          <button class="nav-button" type="button" name="button"><i class="glyphicon glyphicon-search"></i> <span>Topics</span></button>
         </div>
       </div>
 
