Finished the responsiveness for the nav menu

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
           </div>
         </nav>
         <div class="header-element div-nav-btn">
-          <button class="nav-button" type="button" name="button"><i class="glyphicon glyphicon-search"></i> <span>Topics</span></button>
+          <button class="nav-button btn-topics" type="button" name="button"><i class="glyphicon glyphicon-search font-button"></i> <span class="font-button">Topics</span></button>
+          <button class="nav-button btn-menu" type="button" name="button"><i class="glyphicon glyphicon-search font-button"></i> <span class="font-button">Menu</span></button>
         </div>
       </div>
     </header>
