blue square finished and errors fixed

--- a/index.html
+++ b/index.html
@@ -184,7 +184,23 @@
         </article>
       </div>
       <div class="blue-square">
-
+          <div class="flex1">
+            <div style="display: inline-block; text-align: left;">
+              <p class="blue-p">All you want is a fast, secure web? That's why we use ad blockers,
+                too, you know. We gotta keep those servers running though...
+                So we've set up Membership for smart cookies like you. Coming up next:</p>
+                <ul>
+                  <li>Smashing TV Session with Paul Boag on “Customer Journey Mapping: Where UX and Marketing Meet”,</li>
+                  <li>New discounts on tools, services and tutorials,</li>
+                  <li>...plus a seasoned selection of fancy cats.</li>
+                </ul>
+                <button type="button" id="button-blue-square">Explore Membership
+                  <span class="glyphicon glyphicon-arrow-right" style="vertical-align:middle"></span></button>
+              </div>
+            </div>
+          <div class="flex2">
+            <img class="blue-square-img" src="https://d33wubrfki0l68.cloudfront.net/ac26a567a46366d6991c35d1fc8f8a56d5ca48fd/3655d/images/smashing-cat/cat-firechat.svg">
+          </div>
       </div>
     </main>
   </body>
