animation cat and bird on the footer finished and images added

--- a/index.html
+++ b/index.html
@@ -313,19 +313,21 @@
       <p class="p-footer">
         With a commitment to quality content for the design community.
         Founded by Vitaly Friedman and Sven Lennartz. 2006–2019.
-        Smashing is proudly running on Netlify.
-        Fonts by Latinotype.
+        Smashing is proudly running on <a class="a-footer-bottom" href="https://www.netlify.com/?utm_source=link&utm_medium=parter&utm_campaign=sm-footer">Netlify</a>.
+        Fonts by <a class="a-footer-bottom" href="https://www.netlify.com/?utm_source=link&utm_medium=parter&utm_campaign=sm-footer">Latinotype</a>.
       </p>
       <ul class="second-ul-footer">
-         <li class="second-li-footer">Write for us</li>
-         <li class="second-li-footer">Contact us</li>
-         <li class="second-li-footer">About us (Impressum)</li>
-         <li class="second-li-footer">Privacy policy</li>
-         <li class="second-li-footer">Membership login</li>
-         <li class="second-li-footer">Delivery times</li>
-         <li class="second-li-footer">Advertise</li>
+         <li class="second-li-footer"><span class="glyphicon glyphicon-pencil"></span> <a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Write for us</li></a>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Contact us</li></a>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">About us (Impressum)</li></a>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Privacy policy</li>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Membership login</li></a>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Delivery times</li></a>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Advertise</li></a>
       </ul>
       <img class="img-bird-footer" src="img/bird.png">
+      <img class="img-cat-footer" src="img/cat.png">
+      <img class="img-ate-footer" src="img/ate.png">
     </footer>
   </body>
 </html>
