shadow issues fixed and division-span resolution for mobiles changed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div id="container-title">
           <div id="articles-title">Don’t Miss These Latest<span class="trick">.</span>  <span class="trick">.</span>Articles
           </div><br>
-          <img style="filter: blur(10px);" src="img/sombra.png">
+          <img class="blur-shadow" src="img/sombra.png">
         </div>
         <article class="box back1 article-padding-top">
           <div class="sub-box">
@@ -201,7 +201,10 @@
               </div>
             </div>
           <div class="flex2">
-            <img class="blue-square-img" src="https://d33wubrfki0l68.cloudfront.net/ac26a567a46366d6991c35d1fc8f8a56d5ca48fd/3655d/images/smashing-cat/cat-firechat.svg">
+            <div class="book-shadow-container">
+              <img class="red-block-img-shadow blur-shadow" src="img/sombra.png">
+              <img class="blue-square-img" src="https://d33wubrfki0l68.cloudfront.net/ac26a567a46366d6991c35d1fc8f8a56d5ca48fd/3655d/images/smashing-cat/cat-firechat.svg">
+            </div>
           </div>
       </div>
       <div class="grid-article wrapper">
@@ -353,7 +356,10 @@
                   <span class="glyphicon glyphicon-arrow-right" style="vertical-align:middle"></span></button>
             </div>
           <div class="flex2">
-            <img class="blue-square-img" src="https://res.cloudinary.com/indysigner/image/upload/v1542959380/shop/design-systems-hardcover-book.png" width="260">
+            <div class="book-shadow-container">
+              <img class="red-block-img-shadow blur-shadow" src="img/sombra.png">
+              <img class="blue-square-img red-block-img" src="https://res.cloudinary.com/indysigner/image/upload/v1542959380/shop/design-systems-hardcover-book.png" width="260">
+            </div>
           </div>
       </div>
       <br><br>
