issues with a tags resolved

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         <h2 class="h2-red-block"><a class="h2-red-block" href="https://www.smashingmagazine.com/printed-books/design-systems/">Smashing Newsletter</a></h2>
         <p class="blue-p p-red-img-square">Imagine you wrote a beautiful song and nobody discovered it. That would make any cat sad. Don't let that happen!</p>
         <img class="img-red-image-square" src="https://d33wubrfki0l68.cloudfront.net/ce7741e1659c0366fda51555365194e0bfd136c0/ae578/images/smashing-cat/cat-with-trampet.svg" alt="cat">
-        <form role="form">
+        <form>
           <div class="div-form-red-square">
             <label class="label-red-img-square" for="email">
               <input class="input-red-img-square" type="email" id="email" onfocus="fix()" onblur="reversed()" required>
@@ -428,13 +428,13 @@
         Fonts by <a class="a-footer-bottom" href="https://www.netlify.com/?utm_source=link&utm_medium=parter&utm_campaign=sm-footer">Latinotype</a>.
       </p>
       <ul class="second-ul-footer">
-         <li class="second-li-footer"><span class="glyphicon glyphicon-pencil"></span> <a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Write for us</li></a>
-         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Contact us</li></a>
-         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">About us (Impressum)</li></a>
-         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Privacy policy</li>
-         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Membership login</li></a>
-         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Delivery times</li></a>
-         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Advertise</li></a>
+         <li class="second-li-footer"><span class="glyphicon glyphicon-pencil"></span> <a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Write for us</a></li>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Contact us</a></li>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">About us (Impressum)</a></li>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Privacy policy</a></li>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Membership login</a></li>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Delivery times</a></li>
+         <li class="second-li-footer"><a class="a-footer-bottom" href="https://www.smashingmagazine.com/write-for-us/">Advertise</a></li>
       </ul>
       <img class="img-bird-footer" src="img/bird.png" alt="bird">
       <img class="img-cat-footer" src="img/cat.png" alt="cat">
