--- a/index.html
+++ b/index.html
@@ -347,6 +347,21 @@
             <span class="glyphicon glyphicon-arrow-right" style="vertical-align:middle"></span></button>
             <img class="img-green-block" src="https://d33wubrfki0l68.cloudfront.net/148069bc1849f0c7b2304c945073dbdfdb6341f0/b12bb/images/printed-mag/printmag-homepage-opt.svg" alt="cat">
       </div>
+      <div class="container-person-week">
+        <div class="img-user-week-flex">
+          <img class="img-user-week" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/aa39b1b9-f019-4667-bafc-11d873d6ad9a/kenneth-auchenberg-opt.png" alt="Person of the week">
+        </div>
+        <div class="info-person-week">
+          <h2 class="h2-person-week">PERSON OF THE WEEK</h2>
+          <p><a href="https://kenneth.io/">Kenneth Auchenberg</a> is the creator of <a href="https://2019.coldfront.co/">ColdFront</a> conference and founder
+            of the <a href="https://copenhagenjs.dk/">CopenhagenJS</a> meetup which has grown to more than 1,000 members over time.
+            Passionate about the next generation of developer tooling, he worked as a Program Manager
+            at Microsoft until recently where he was on a mission to get browsers to talk to text editors and
+            to enable everyone to build the developer tools they need for the web. Kenneth serves on multiple
+            advisory boards and is a Global Shaper for World Economic Forum. You can find him on
+            Twitter as <a href="https://twitter.com/auchenberg">@auchenberg</a>. Thank you for helping the web evolve, dear Kenneth!</p>
+        </div>
+      </div>
       <div class="division-span">
         <a class="divison-a" href="https://www.smashingmagazine.com/articles/page/2/">MORE LINKS ON TWITTER → </a>
       </div>
