resolving issues with the articles and issue with the person of the week fixed

--- a/index.html
+++ b/index.html
@@ -353,13 +353,13 @@
         </div>
         <div class="info-person-week">
           <h2 class="h2-person-week">PERSON OF THE WEEK</h2>
-          <p><a href="https://kenneth.io/">Kenneth Auchenberg</a> is the creator of <a href="https://2019.coldfront.co/">ColdFront</a> conference and founder
-            of the <a href="https://copenhagenjs.dk/">CopenhagenJS</a> meetup which has grown to more than 1,000 members over time.
+          <p><a class="a-person-week" href="https://kenneth.io/">Kenneth Auchenberg</a> is the creator of <a class="a-person-week" href="https://2019.coldfront.co/">ColdFront</a> conference and founder
+            of the <a class="a-person-week" href="https://copenhagenjs.dk/">CopenhagenJS</a> meetup which has grown to more than 1,000 members over time.
             Passionate about the next generation of developer tooling, he worked as a Program Manager
             at Microsoft until recently where he was on a mission to get browsers to talk to text editors and
             to enable everyone to build the developer tools they need for the web. Kenneth serves on multiple
             advisory boards and is a Global Shaper for World Economic Forum. You can find him on
-            Twitter as <a href="https://twitter.com/auchenberg">@auchenberg</a>. Thank you for helping the web evolve, dear Kenneth!</p>
+            Twitter as <a class="a-person-week" href="https://twitter.com/auchenberg">@auchenberg</a>. Thank you for helping the web evolve, dear Kenneth!</p>
         </div>
       </div>
       <div class="division-span">
