Started to create the 'community links' section

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Martel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=BioRhyme:700|Lato:300i&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -360,6 +359,29 @@
             to enable everyone to build the developer tools they need for the web. Kenneth serves on multiple
             advisory boards and is a Global Shaper for World Economic Forum. You can find him on
             Twitter as <a class="a-person-week" href="https://twitter.com/auchenberg">@auchenberg</a>. Thank you for helping the web evolve, dear Kenneth!</p>
+        </div>
+      </div>
+      <div class="community-links-container">
+        <div class="community-link">
+          <div class="img-user-div">
+            <a href="#">
+              <img class="img-user" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/531ff6e8-fc1c-4aeb-9ea9-a0410de14f20/playbook-opt.png" alt="Playbook">
+            </a>
+          </div>
+          <div class="community-link-text">
+            <p class="by-author"><a href="">Playbook</a> wrote</p>
+            <h2 class="guides-title">Grow As A Design Manager</h2>
+            <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a href="">guide on scaling the team</a> and growing as a design manager.</p>
+          </div>
+        </div>
+        <div class="community-link">
+
+        </div>
+        <div class="community-link">
+
+        </div>
+        <div class="community-link">
+
         </div>
       </div>
       <div class="division-span">
