--- a/index.html
+++ b/index.html
@@ -346,97 +346,99 @@
             <span class="glyphicon glyphicon-arrow-right" style="vertical-align:middle"></span></button>
             <img class="img-green-block" src="https://d33wubrfki0l68.cloudfront.net/148069bc1849f0c7b2304c945073dbdfdb6341f0/b12bb/images/printed-mag/printmag-homepage-opt.svg" alt="cat">
       </div>
-      <div class="container-person-week">
-        <div class="img-user-week-flex">
-          <img class="img-user-week" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/aa39b1b9-f019-4667-bafc-11d873d6ad9a/kenneth-auchenberg-opt.png" alt="Person of the week">
-        </div>
-        <div class="info-person-week">
-          <h2 class="h2-person-week">PERSON OF THE WEEK</h2>
-          <p><a class="a-person-week" href="https://kenneth.io/">Kenneth Auchenberg</a> is the creator of <a class="a-person-week" href="https://2019.coldfront.co/">ColdFront</a> conference and founder
-            of the <a class="a-person-week" href="https://copenhagenjs.dk/">CopenhagenJS</a> meetup which has grown to more than 1,000 members over time.
-            Passionate about the next generation of developer tooling, he worked as a Program Manager
-            at Microsoft until recently where he was on a mission to get browsers to talk to text editors and
-            to enable everyone to build the developer tools they need for the web. Kenneth serves on multiple
-            advisory boards and is a Global Shaper for World Economic Forum. You can find him on
-            Twitter as <a class="a-person-week" href="https://twitter.com/auchenberg">@auchenberg</a>. Thank you for helping the web evolve, dear Kenneth!</p>
-        </div>
-      </div>
-      <div class="community-links-container">
-        <div class="community-link">
-          <div class="img-user-div">
-            <a href="https://www.twitter.com/NadiehBremer">
-              <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/531ff6e8-fc1c-4aeb-9ea9-a0410de14f20/playbook-opt.png" alt="Playbook">
-            </a>
+      <div class="white-container">
+        <div class="container-person-week">
+          <div class="img-user-week-flex">
+            <img class="img-user-week" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/aa39b1b9-f019-4667-bafc-11d873d6ad9a/kenneth-auchenberg-opt.png" alt="Person of the week">
           </div>
-          <div class="community-link-text">
-            <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Playbook</a> wrote</p>
-            <h2 class="guides-title">Grow As A Design Manager</h2>
-            <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="https://askplaybook.com/collection/grow-as-a-design-manager">guide on scaling the team</a> and growing as a design manager.</p>
+          <div class="info-person-week">
+            <h2 class="h2-person-week">PERSON OF THE WEEK</h2>
+            <p><a class="a-person-week" href="https://kenneth.io/">Kenneth Auchenberg</a> is the creator of <a class="a-person-week" href="https://2019.coldfront.co/">ColdFront</a> conference and founder
+              of the <a class="a-person-week" href="https://copenhagenjs.dk/">CopenhagenJS</a> meetup which has grown to more than 1,000 members over time.
+              Passionate about the next generation of developer tooling, he worked as a Program Manager
+              at Microsoft until recently where he was on a mission to get browsers to talk to text editors and
+              to enable everyone to build the developer tools they need for the web. Kenneth serves on multiple
+              advisory boards and is a Global Shaper for World Economic Forum. You can find him on
+              Twitter as <a class="a-person-week" href="https://twitter.com/auchenberg">@auchenberg</a>. Thank you for helping the web evolve, dear Kenneth!</p>
           </div>
         </div>
-        <div class="community-link">
-          <div class="img-user-div">
-            <a href="https://www.twitter.com/NadiehBremer">
-              <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/07bf9c73-ebd6-404a-9c2e-56a1066a2d7b/jen-simmons-100px-opt.png" alt="Playbook">
-            </a>
+        <div class="community-links-container">
+          <div class="community-link">
+            <div class="img-user-div">
+              <a href="https://www.twitter.com/NadiehBremer">
+                <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/531ff6e8-fc1c-4aeb-9ea9-a0410de14f20/playbook-opt.png" alt="Playbook">
+              </a>
+            </div>
+            <div class="community-link-text">
+              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Playbook</a> wrote</p>
+              <h2 class="guides-title">Grow As A Design Manager</h2>
+              <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="https://askplaybook.com/collection/grow-as-a-design-manager">guide on scaling the team</a> and growing as a design manager.</p>
+            </div>
           </div>
-          <div class="community-link-text">
-            <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Jen Simmons</a> wrote</p>
-            <h2 class="guides-title">Examine And Edit CSS In Firefox</h2>
-            <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="">guide on scaling the team</a> and growing as a design manager.</p>
+          <div class="community-link">
+            <div class="img-user-div">
+              <a href="https://www.twitter.com/NadiehBremer">
+                <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/07bf9c73-ebd6-404a-9c2e-56a1066a2d7b/jen-simmons-100px-opt.png" alt="Playbook">
+              </a>
+            </div>
+            <div class="community-link-text">
+              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Jen Simmons</a> wrote</p>
+              <h2 class="guides-title">Examine And Edit CSS In Firefox</h2>
+              <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="">guide on scaling the team</a> and growing as a design manager.</p>
+            </div>
+          </div>
+          <div class="community-link">
+            <div class="img-user-div">
+              <a href="https://www.twitter.com/NadiehBremer">
+                <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/9e5607da-48d4-4581-b3ab-5333424e1ac0/ali-spittel-opt.png" alt="Playbook">
+              </a>
+            </div>
+            <div class="community-link-text">
+              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Ali Spittel</a> wrote</p>
+              <h2 class="guides-title">Blogging 101</h2>
+              <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="https://dsternlicht.github.io/react-dynamic-charts/">guide on scaling the team</a> and growing as a design manager.</p>
+            </div>
+          </div>
+          <div class="community-link">
+            <div class="img-user-div">
+              <a href="https://www.twitter.com/NadiehBremer">
+                <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/755b0b57-a506-4ddf-97f3-5b5c2ea4d13f/daniel-sternlicht-opt.png" alt="Playbook">
+              </a>
+            </div>
+            <div class="community-link-text">
+              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Daniel Sternlicht</a> wrote</p>
+              <h2 class="guides-title">React Dynamic Charts</h2>
+              <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; Daniel Sternlicht’s <a class="a-person-week" href="https://dsternlicht.github.io/react-dynamic-charts/">React Dynamic Charts</a> library allows you to create dynamic charts to visualize your data.</p>
+            </div>
+          </div>
+          <div class="community-link">
+            <div class="img-user-div">
+              <a href="https://www.twitter.com/NadiehBremer">
+                <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/07d3ab7a-1874-4747-b9ff-9b25180f4f23/tobias-van-schneider-opt.png" alt="Playbook">
+              </a>
+            </div>
+            <div class="community-link-text">
+              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Tobias van Schneider</a> wrote</p>
+              <h2 class="guides-title">Portfolio Building Checklist</h2>
+              <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; What’s the best way to finally launch your portfolio? Tobias van Schneider shares a fun little <a class="a-person-week" href="https://www.semplice.com/portfolio-building-checklist">step-by-step checklist.</a></p>
+            </div>
+          </div>
+          <div class="community-link">
+            <div class="img-user-div">
+              <a href="https://www.twitter.com/NadiehBremer">
+                <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/4ba2c86c-0693-4063-a206-ae0f477778b7/nadieh-bremer-100px-opt.png" alt="Playbook">
+              </a>
+            </div>
+            <div class="community-link-text">
+              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Nadieh Bremer</a> wrote</p>
+              <h2 class="guides-title">Planet Globe</h2>
+              <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; Nadieh Bremer created a stunning <a class="a-person-week" href="https://nbremer.github.io/planet-globe/">dataviz project</a> that visualizes how the satellites circling the Earth create a full image of the Earth’s landmass in one day.</p>
+            </div>
           </div>
         </div>
-        <div class="community-link">
-          <div class="img-user-div">
-            <a href="https://www.twitter.com/NadiehBremer">
-              <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/9e5607da-48d4-4581-b3ab-5333424e1ac0/ali-spittel-opt.png" alt="Playbook">
-            </a>
-          </div>
-          <div class="community-link-text">
-            <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Ali Spittel</a> wrote</p>
-            <h2 class="guides-title">Blogging 101</h2>
-            <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="https://dsternlicht.github.io/react-dynamic-charts/">guide on scaling the team</a> and growing as a design manager.</p>
-          </div>
+        <div class="division-span white-container">
+          <a class="divison-a" href="https://www.smashingmagazine.com/articles/page/2/">MORE LINKS ON TWITTER → </a>
         </div>
-        <div class="community-link">
-          <div class="img-user-div">
-            <a href="https://www.twitter.com/NadiehBremer">
-              <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/755b0b57-a506-4ddf-97f3-5b5c2ea4d13f/daniel-sternlicht-opt.png" alt="Playbook">
-            </a>
-          </div>
-          <div class="community-link-text">
-            <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Daniel Sternlicht</a> wrote</p>
-            <h2 class="guides-title">React Dynamic Charts</h2>
-            <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; Daniel Sternlicht’s <a class="a-person-week" href="https://dsternlicht.github.io/react-dynamic-charts/">React Dynamic Charts</a> library allows you to create dynamic charts to visualize your data.</p>
-          </div>
-        </div>
-        <div class="community-link">
-          <div class="img-user-div">
-            <a href="https://www.twitter.com/NadiehBremer">
-              <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/07d3ab7a-1874-4747-b9ff-9b25180f4f23/tobias-van-schneider-opt.png" alt="Playbook">
-            </a>
-          </div>
-          <div class="community-link-text">
-            <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Tobias van Schneider</a> wrote</p>
-            <h2 class="guides-title">Portfolio Building Checklist</h2>
-            <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; What’s the best way to finally launch your portfolio? Tobias van Schneider shares a fun little <a class="a-person-week" href="https://www.semplice.com/portfolio-building-checklist">step-by-step checklist.</a></p>
-          </div>
-        </div>
-        <div class="community-link">
-          <div class="img-user-div">
-            <a href="https://www.twitter.com/NadiehBremer">
-              <img class="img-user img-user-extra" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/4ba2c86c-0693-4063-a206-ae0f477778b7/nadieh-bremer-100px-opt.png" alt="Playbook">
-            </a>
-          </div>
-          <div class="community-link-text">
-            <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Nadieh Bremer</a> wrote</p>
-            <h2 class="guides-title">Planet Globe</h2>
-            <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; Nadieh Bremer created a stunning <a class="a-person-week" href="https://nbremer.github.io/planet-globe/">dataviz project</a> that visualizes how the satellites circling the Earth create a full image of the Earth’s landmass in one day.</p>
-          </div>
-        </div>
-      </div>
-      <div class="division-span">
-        <a class="divison-a" href="https://www.smashingmagazine.com/articles/page/2/">MORE LINKS ON TWITTER → </a>
       </div>
       <div class="blue-square red-block">
           <div class="flex1" style="text-align: left; padding-left: 90px;">
