Finished the responsiveness for the 'community links' grid

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               </a>
             </div>
             <div class="community-link-text">
-              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Playbook</a> wrote</p>
+              <p class="by-author by-author-community"><a href="https://www.twitter.com/NadiehBremer">Playbook</a> wrote</p>
               <h2 class="guides-title">Grow As A Design Manager</h2>
               <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="https://askplaybook.com/collection/grow-as-a-design-manager">guide on scaling the team</a> and growing as a design manager.</p>
             </div>
@@ -382,7 +382,7 @@
               </a>
             </div>
             <div class="community-link-text">
-              <p class="by-author"><a href="https://www.twitter.com/NadiehBremer">Jen Simmons</a> wrote</p>
+              <p class="by-author by-author-community"><a href="https://www.twitter.com/NadiehBremer">Jen Simmons</a> wrote</p>
               <h2 class="guides-title">Examine And Edit CSS In Firefox</h2>
               <p class="community-link-snippet"><span>AUGUST 2, 2019</span> &#8212; How do you approach the challenges that design management brings along? Playbook shares a fantastic <a class="a-person-week" href="">guide on scaling the team</a> and growing as a design manager.</p>
             </div>
