--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="/css/heatmap.css">
   </head>
   <body>
-    <a href="index.html">Click here to go to our website finished</a>
+    <a href="smashingmagazine.html">Click here to go to our website finished</a>
   </body>
 </html>
