--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Heat Map</title>
-    <link rel="stylesheet" href="/css/heatmap.css">
+    <link rel="stylesheet" type="text/css" href="css/heatmap.css">
   </head>
   <body>
-    <a href="smashingmagazine.html">Click here to go to our website finished</a>
+    <div class="grey0 center padding flex">
+      <div class="flex1 grey1 padding">
+        A
+      </div>
+      <div class="flex1 grey1 padding">
+        B
+      </div>
+      <div class="flex1 grey1 padding">
+        <a class="main-a" href="smashingmagazine.html">Click here to go to our clone website</a>
+      </div>
+      <div class="flex1 grey1 padding">
+        C
+      </div >
+      <div class="flex1 grey1 padding">
+        D
+      </div>
+    </div>
+    <div class="grey1">
+    </div>
+
   </body>
 </html>
