--- a/index.html
+++ b/index.html
@@ -7,24 +7,110 @@
   </head>
   <body>
     <div class="grey0 center padding flex">
-      <div class="flex1 grey1 padding">
-        A
-      </div>
-      <div class="flex1 grey1 padding">
-        B
-      </div>
+      <div class="flex1 grey1 padding"></div>
+      <div class="flex1 grey1 padding"></div>
       <div class="flex1 grey1 padding">
         <a class="main-a" href="smashingmagazine.html">Click here to go to our clone website</a>
       </div>
-      <div class="flex1 grey1 padding">
-        C
+      <div class="flex1 grey1 padding"></div >
+      <div class="flex1 grey1 padding"></div>
+    </div>
+    <div class="grid-2-col">
+      <div id="main-title"></div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding"></div>
       </div >
-      <div class="flex1 grey1 padding">
-        D
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding"></div>
       </div>
     </div>
-    <div class="grey1">
+    <div class="grey1 padding">
+      <div class="grey2 padding title"></div>
+      <div class="grey2 padding p"></div>
     </div>
-
+    <div class="grid-3-col">
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div >
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+    </div>
+    <div class="grey1 padding">
+      <div class="grey2 padding title"></div>
+      <div class="grey2 padding p"></div>
+    </div>
+    <div class="grid-3-col">
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div >
+      </div>
+    </div>
+    <div class="grid-2-col grey0 padding">
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+      <div class="grey1 padding border">
+        <div class="grey2 padding title"></div>
+        <div class="grey2 padding p"></div>
+      </div>
+    </div>
+    <div class="grey1 padding">
+      <div class="grey2 padding title"></div>
+      <div class="grey2 padding p"></div>
+    </div>
+    <footer class="grey0 padding">
+      <div class="grey2 padding title center"></div>
+    </footer>
   </body>
 </html>
